argocd/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-http
  namespace: argo
spec:
  parentRefs:
    - name: pelindung-bumi-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - argocd.pelindungbumi.dev
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-https
  namespace: argo
spec:
  parentRefs:
    - name: pelindung-bumi-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - argocd.pelindungbumi.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          namespace: argo
          port: 80
